@@ -1,5 +1,10 @@
 CHANGES
 =======
 
+* Add the install script to package it
+* Add the tests
+* Rename
+* Add a argument and fix a error
+* Fix the bug for `set_builtin`
 * Add some codes
 * Initial commit
